# plan-cascade

./: .gitignore  .gitmodules  .mega-status.json  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  agents.json  external-skills.json  findings.md  glm-embedding.md  mega-findings.md  mega-plan.json  ollama-embedding.md  output-raw-2026-02-16T12-16-27-884Z.txt  prd.json  progress.txt  pyproject.toml  qwen-embedding.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/crates/core/: Cargo.toml
desktop/src-tauri/crates/core/src/: builders.rs  context.rs  error.rs  event_actions.rs  lib.rs  proxy.rs  streaming.rs  tool_trait.rs
desktop/src-tauri/crates/llm/: Cargo.toml
desktop/src-tauri/crates/llm/src/: anthropic.rs  deepseek.rs  glm.rs  http_client.rs  lib.rs  minimax.rs  ollama.rs  openai.rs  openai_compat.rs  provider.rs  qwen.rs  reliable_catalog.rs  types.rs
desktop/src-tauri/crates/quality-gates/: Cargo.toml
desktop/src-tauri/crates/quality-gates/src/: detector.rs  lib.rs  models.rs  pipeline.rs  validators.rs
desktop/src-tauri/crates/tools/: Cargo.toml
desktop/src-tauri/crates/tools/src/: executor.rs  lib.rs  prompt_fallback.rs  trait_def.rs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: app_shell.rs  commands.rs  lib.rs  main.rs  state.rs
desktop/src-tauri/src/commands/: a2a.rs  agent_composer.rs  agents.rs  analytics.rs  app_shell.rs  artifacts.rs  browser.rs  claude_code.rs  codebase.rs  context_v2.rs  debug_mode.rs  design.rs  embedding.rs  evaluation.rs  execution_history.rs  file_changes.rs  files.rs  git.rs  graph_workflow.rs  guardrails.rs  health.rs  init.rs  knowledge.rs  lsp.rs  markdown.rs  mcp.rs  memory.rs  mod.rs  permissions.rs  pipeline_execution.rs  plan_mode.rs  plugins.rs  projects.rs  prompts.rs  proxy.rs  quality_gates.rs  recovery.rs  remote.rs  sessions.rs  settings.rs  (+10 more)
desktop/src-tauri/src/commands/plan_mode/: lifecycle_reporting_commands.rs  planning_execution_commands.rs  session_analysis_commands.rs
desktop/src-tauri/src/commands/task_mode/: analysis_commands.rs  execution_commands.rs  generation_commands.rs  session_lifecycle_commands.rs
desktop/src-tauri/src/models/: agent.rs  analytics.rs  checkpoint.rs  claude_code.rs  design_doc.rs  export.rs  iteration.rs  markdown.rs  mcp.rs  mega.rs  mod.rs  orchestrator.rs  prd.rs  project.rs  prompt.rs  quality_gates.rs  response.rs  session.rs  settings.rs  worktree.rs
desktop/src-tauri/src/services/: agent.rs  agent_executor.rs  debug_mode.rs  file_change_tracker.rs  markdown.rs  mcp.rs  mcp_catalog.rs  mcp_installer.rs  mcp_runtime_manager.rs  mod.rs  project.rs  prompt.rs  proxy.rs  session.rs  settings_export.rs  timeline.rs
desktop/src-tauri/src/services/a2a/: client.rs  discovery.rs  mod.rs  remote_agent.rs  service.rs  types.rs
desktop/src-tauri/src/services/agent_composer/: codegen.rs  conditional.rs  eval_types.rs  evaluation.rs  graph_types.rs  graph_workflow.rs  llm_agent.rs  loop_agent.rs  mod.rs  parallel.rs  registry.rs  sequential.rs  types.rs
desktop/src-tauri/src/services/analytics/: aggregation.rs  cost_calculator.rs  export.rs  mod.rs  service.rs  tracked_llm.rs  tracker.rs
desktop/src-tauri/src/services/artifacts/: mod.rs
desktop/src-tauri/src/services/claude_code/: chat.rs  events.rs  executor.rs  mod.rs  session_manager.rs  thinking.rs  tools.rs
desktop/src-tauri/src/services/context/: assembly.rs  events.rs  filter.rs  mod.rs
desktop/src-tauri/src/services/core/: adapter.rs  builders.rs  compaction.rs  context.rs  event_actions.rs  mod.rs  tool_trait.rs
desktop/src-tauri/src/services/dependency/: analyzer.rs  mod.rs
desktop/src-tauri/src/services/design/: generator.rs  importer.rs  loader.rs  mod.rs
desktop/src-tauri/src/services/fallback/: chain.rs  mod.rs
desktop/src-tauri/src/services/git/: conflict.rs  graph.rs  llm_assist.rs  mod.rs  service.rs  types.rs  watcher.rs
desktop/src-tauri/src/services/graph_workflow/: checkpoint_store.rs  checkpointer.rs  mod.rs
desktop/src-tauri/src/services/guardrail/: code_security.rs  custom.rs  mod.rs  registry.rs  schema_validation.rs  sensitive_data.rs
desktop/src-tauri/src/services/iteration/: loop_runner.rs  mod.rs  story_executor.rs
desktop/src-tauri/src/services/knowledge/: chunker.rs  code_chunker.rs  context_provider.rs  docs_indexer.rs  mod.rs  observability.rs  pipeline.rs  reranker.rs
desktop/src-tauri/src/services/llm/: anthropic.rs  deepseek.rs  glm.rs  minimax.rs  mod.rs  ollama.rs  openai.rs  provider.rs  qwen.rs  types.rs
desktop/src-tauri/src/services/mega/: mod.rs  orchestrator.rs  prd_generator.rs
desktop/src-tauri/src/services/memory/: extraction.rs  maintenance.rs  mod.rs  query_policy_v2.rs  query_v2.rs  retrieval.rs  store.rs
desktop/src-tauri/src/services/orchestrator/: adaptive_scope.rs  analysis_index.rs  analysis_merge.rs  analysis_scheduler.rs  analysis_store.rs  background_indexer.rs  codebase_search_service.rs  component_classifier.rs  embedding_config_builder.rs  embedding_manager.rs  embedding_provider.rs  embedding_provider_glm.rs  embedding_provider_ollama.rs  embedding_provider_openai.rs  embedding_provider_qwen.rs  embedding_provider_tfidf.rs  embedding_service.rs  event_actions_applicator.rs  hnsw_index.rs  hooks.rs  hybrid_search.rs  index_manager.rs  index_store.rs  iteration_budget.rs  lsp_client.rs  lsp_enricher.rs  lsp_registry.rs  mod.rs  permission_gate.rs  permissions.rs  rate_limit_classifier.rs  service.rs  (+4 more)
desktop/src-tauri/src/storage/: config.rs  database.rs  keyring.rs  mod.rs
desktop/src-tauri/src/utils/: error.rs  mod.rs  paths.rs  process.rs
desktop/src-tauri/tests/: analytics_send_message_guard.rs
desktop/src-tauri/tests/integration/: claude_code_test.rs  design_doc_test.rs  mod.rs  prompt_fallback_test.rs  quality_gates_test.rs  recovery_test.rs  spec_interview_test.rs  standalone_test.rs  strategy_test.rs  tool_calling_test.rs  worktree_test.rs
desktop/src-tauri/vendor-patches/openai-api-rs/: 0001-local.patch  README.md  UPSTREAM.md
(+1203 files in other folders)
