[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-cascade"
version = "3.2.0"
description = "Plan Cascade - Three-layer parallel development framework for AI coding tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Plan Cascade Contributors"}
]
keywords = [
    "planning",
    "development",
    "ai",
    "mcp",
    "claude",
    "cursor"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
plan-cascade-mcp = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/anthropics/plan-cascade"
Documentation = "https://github.com/anthropics/plan-cascade/blob/main/docs/MCP-SERVER-GUIDE.md"
Repository = "https://github.com/anthropics/plan-cascade"

[tool.setuptools.packages.find]
include = ["mcp_server*", "skills*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
