[package]
name = "plan-cascade-desktop"
version = "0.1.0"
description = "Plan Cascade Desktop Application"
authors = ["Plan Cascade Team"]
license = "MIT"
repository = "https://github.com/plan-cascade/plan-cascade"
edition = "2021"

[lib]
name = "plan_cascade_desktop"
path = "src/lib.rs"

[[bin]]
name = "plan-cascade-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# HTTP client (kept for future external API calls, not for sidecar)
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }

# Ollama native SDK
ollama-rs = { version = "0.3", features = ["stream"] }
tokio-stream = "0.1"
schemars = "1"

# ZhipuAI (GLM) official SDK - types for response parsing and tool definitions
zai-rs = "0.1"

# WebSocket (for future use)
futures-util = "0.3"
tokio-tungstenite = "0.24"

# SQLite database with connection pooling
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Secure secret storage (platform-native backends for OS keychain access)
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# DashScope SDK for Qwen LLM provider
async-dashscope = "0.12"

# Exponential backoff (used by DashScope SDK client builder)
backoff = "0.4"

# Anthropic SDK types (used by MiniMax provider via Anthropic-compatible endpoint)
anthropic-async = "0.4"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Glob pattern matching
glob = "0.3"

# Regex for grep
regex = "1"

# Gitignore-aware file walking (ripgrep's walker)
ignore = "0.4"

# Cross-platform directories
dirs = "6"

# Date/time handling
chrono = "0.4"

# Temporary files (for testing)
tempfile = "3"

# SHA-256 hashing for file checksums
sha2 = "0.10"

# HMAC computation for webhook signing (Feishu, Custom)
hmac = "0.12"

# Diff calculation
similar = "2"

# File system watching
notify = "6"
notify-debouncer-mini = "0.4"

# TOML parsing (for quality gates)
toml = "0.8"

# Logging
tracing = "0.1"

# Web content
html2md = "0.2"
url = "2"

# Document parsing
pdf-extract = "0.10"
calamine = "0.26"
zip = "2"
quick-xml = "0.37"

# Image metadata
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.22"

# Caching
mini-moka = "0.10"

# HNSW approximate nearest neighbor search
hnsw_rs = "0.3"

# LSP type definitions for language server protocol enrichment
lsp-types = "0.97"

# Concurrent hash map for LSP request correlation
dashmap = "6"

# Remote control - Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Tree-sitter parsing for accurate symbol extraction
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

[dev-dependencies]
# Testing
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Optional browser automation support. Adds chromiumoxide dependency.
# Enable with: cargo build --features browser
browser = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
