[package]
name = "plan-cascade-tools"
version = "0.1.0"
description = "Tool executor types, trait definitions, and prompt utilities for Plan Cascade Desktop"
authors = ["Plan Cascade Team"]
license = "MIT"
edition = "2021"

[dependencies]
# Workspace crates
plan-cascade-core = { path = "../core" }
plan-cascade-llm = { path = "../llm" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "2"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
